# cloud_function_template

./: Makefile  README.md  pyproject.toml
.github/workflows/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  code_quality.yml
functions/hello_world/: main.py
